--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="gold">#A8CF45</color>
     <color name="light_blue">#0098DA</color>
     <color name="background">#001822</color>
-    <color name="playBackButtonsColor">#191921</color>
+    <color name="container">#191921</color>
     <color name="iconColor">#FFFFFF</color>
     <color name="red">#E53935</color>
     <color name="esmerald">#50C878</color>
