--- a/app/src/main/res/layout/fragment_album_songs.xml
+++ b/app/src/main/res/layout/fragment_album_songs.xml
@@ -20,7 +20,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/gold"
+            android:background="@color/container"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintVertical_bias="0">
 
