--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -68,7 +68,8 @@
                 app:layout_constraintTop_toBottomOf="@id/playlists_see_albums"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="155dp"
-                tools:listitem="@layout/fragment_playlists_item" />
+                tools:listitem="@layout/fragment_playlists_item"
+                android:visibility="gone"/>
 
             <br.com.listennow.components.EmptyState
                 android:id="@+id/playlists_empty_state"
@@ -76,11 +77,68 @@
                 android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/playlists_see_albums"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:message="@string/albums_no_playlists_found_empty_state"
                 android:layout_marginBottom="155dp"
                 android:visibility="gone" />
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmerList"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/playlists_see_albums"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+
+                    <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        layout="@layout/fragment_playlists_item_skeleton" />
+                </LinearLayout>
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/playlists_new_playlist"
